--- a/.fonts.conf
+++ b/.fonts.conf
@@ -5,82 +5,18 @@
 <dir>/etc/X11/fontpath.d</dir>
 <dir>/usr/share/fonts/bitmap</dir>
 <dir>~/.fonts</dir>
-<match target="pattern" name="family" >
-    <test name="family" qual="any" >
-        <string>Bitstream Vera Sans</string>
-    </test>
-    <edit name="family" mode="assign">
-        <string>Liberation Sans</string>
-    </edit>
-</match>
-<!--<match target="font"><edit name="antialias" mode="assign"><bool>false</bool></edit></match>-->
 <match target="font">
 	<!--<edit name="rgba" mode="assign"><const>none</const></edit>-->
 	<edit name="hintstyle" mode="assign"><const>hintfull</const></edit>
 </match>
 <match target="pattern" name="family" >
-    <test name="family" qual="any" >
-        <!--<string>Helvetica World</string>-->
-        <string>Helvetica</string>
-		<!--<string>Luxi Mono</string>-->
+    <test name="family" qual="all">
+        <string>Optima Cyr</string>
     </test>
     <edit name="hintstyle" mode="assign">
         <const>hintnone</const>
     </edit>
 </match>
-<match target="pattern" name="family" >
-    <test name="family" qual="any" >
-        <string>Helvetica</string>
-    </test>
-    <edit name="hintstyle" mode="assign">
-        <const>hintnone</const>
-    </edit>
-</match>
-<match target="pattern" name="family" >
-    <test name="family" qual="any" >
-        <string>Letter Gothic</string>
-    </test>
-    <edit name="hintstyle" mode="assign">
-        <const>hintnone</const>
-    </edit>
-</match>
-<match target="pattern" name="family" >
-    <test name="family" qual="any" >
-        <string>Droid Sans Mono</string>
-    </test>
-    <edit name="rgba" mode="assign">
-        <const>none</const>
-    </edit>
-<edit name="hintstyle" mode="assign">
-        <const>hintnone</const>
-</edit>
-</match>
-<match target="pattern" name="family" >
-    <test name="family" qual="any" >
-        <string>Pragmata</string>
-    </test>
-    <edit name="autohint" mode="assign">
-        <bool>true</bool>
-    </edit>
-    <edit name="hintstyle" mode="assign">
-        <const>hintfull</const>
-    </edit>
-</match>
-<match target="pattern" name="family" >
-    <test name="family" qual="any" >
-		<string>Luxi Mono</string>
-    </test>
-	<!--<test name="pixelsize" compare="less"><double>40.0</double></test>
-    <edit name="rgba" mode="assign">
-        <const>none</const>
-    </edit>-->
-	<edit name="hintstyle" mode="assign"><const>hintnone</const></edit>
-</match>
-<!--
-<match target="font">
-	<edit name="hintstyle" mode="assign"><const>hintnone</const></edit>
-</match>
--->
 <alias>
     <family>serif</family>
     <prefer>
@@ -90,7 +26,8 @@
   <alias>
     <family>sans-serif</family>
       <prefer>
-        <family>Liberation Sans</family>
+<!--        <family>Liberation Sans</family>-->
+        <family>Frutiger LT 47 LightCn</family>
       </prefer>
   </alias>
   <alias>
