--- a/.fonts.conf
+++ b/.fonts.conf
@@ -26,8 +26,8 @@
   <alias>
     <family>sans-serif</family>
       <prefer>
-<!--        <family>Liberation Sans</family>-->
-        <family>Frutiger LT 47 LightCn</family>
+        <family>Liberation Sans</family>
+        <!--<family>Frutiger LT 47 LightCn</family>-->
       </prefer>
   </alias>
   <alias>
